bug report - outstanding bugs are listed here:

 http://sourceforge.net/tracker/?atid=106663&group_id=6663&func=browse

(to file another bug see the 'submit bug' button on this page).

====================================================================

0.76: please submit patches for this section with actual code/doc
      patches!

* configure.in changes to help support non-Linux environments courtesy
  of Scott T. Emery (Bug 422563 - agmorgan)
* made a pam_cracklib enhancement to interpret -ve limits in a
  sensible fashion contributed by Werner Puschitz (Bug 413162 -
  agmorgan)
* another fix for the latest number of rlimits available to pam_limits
  (Bug 424060 - agmorgan)
* removed stale link from pam_pwdb documentation (Bug 433460 - agmorgan)
* pam_appl.sgml change - more discussion of choosing a service name
  (Bug 417512 - agmorgan)
* more specific linking requirements for -lndbm for pam_userdb - from
  David Lee (Bug 417339 - agmorgan)
* a large number of small changes to make AIX support better (Bug
  416229 - agmorgan)
* $(MAKE) instead of 'make' - from Scott T. Emery (Bug 422144 -
  agmorgan)
* c++ header fixes for pam_misc.h and pam_client.h - from Alexandre
  Sagala (Bug 420270 - agmorgan)
* pam_access fixes - looks out for trailing '.' - from Carlo Marcelo
  Arenas Belon (Bug 419631 - agmorgan)
* don't zero out password strings during pam_unix's password changing
  function (Bug 419803 - vorlon)
* propagate some definitions to the _pam_aconf.h file - from David Lee
  (Bug 415419 - agmorgan)
* solaris GCC OS_CFLAGS change from David Lee (Bug 415412 - agmorgan)
* added a comment to this CHANGELOG to explain why most of the bugids
  used below appear not to be known to sourceforge [try adding 100000
  to the bugid number.] (Bug 414943 - agmorgan)
* bumped version numbers and also added support for SONAME defines
  that appear not to have survived the great autoconf experiment (Bug
  414669 - agmorgan).

0.75: Sat Apr  7 23:10:50 PDT 2001
